Fixed alignment of restaurant button

--- a/styles/home.css
+++ b/styles/home.css
@@ -36,7 +36,7 @@
   width: 30%;
   position: relative;
   display: grid;
-  grid-template-columns: 13% 1fr 20%;
+  grid-template-columns: 12% 1fr 14%;
   align-items: center;
   
   background-color: #f9f9f9;
@@ -47,11 +47,16 @@
   padding-left: 18px;
 }
 #restaurant-choice-text{
-  font-size: 18px;
+  font-size: 16px;
+  margin: 0px;
+  padding-top: 1px;
 }
-/* .fa-solid{
-  margin-right: 14px;
-} */
+ .fa-2x{
+  font-size: 20px;
+ }
+ .fa-arrow-right{
+  font-size: 23px;
+ }
 .button-caption{
   position: absolute;
   top: -32px;
@@ -59,6 +64,7 @@
   color: #313131;
   font-size: 13px;
 }
+
 .calorie-input-container{
   position: relative;
 }
@@ -71,6 +77,7 @@
   border-radius: 10px;
   padding-left: 10px;
 }
+/* Removes the arrows from the calorie input textbox */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
